// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scope can be a deeply nested array which is flattened 1`] = `
Object {
  "foo": Object {
    "bar": Object {
      "going": Object {
        "deeper": Object {
          "name": "from handler",
        },
      },
    },
  },
}
`;

exports[`scope can be a function 1`] = `
Object {
  "fromfn": Object {
    "name": "from handler",
  },
}
`;

exports[`scope can be an array 1`] = `
Object {
  "foo": Object {
    "bar": Object {
      "name": "from handler",
    },
  },
}
`;

exports[`scope can be overridden from the parent 1`] = `
Object {
  "parentScope": Object {
    "name": "from handler",
  },
}
`;

exports[`scope creates objects for missing path values 1`] = `
Object {
  "ascope": Object {
    "10": Object {
      "name": "from handler",
    },
  },
}
`;

exports[`scope function gets props 1`] = `
Object {
  "fromfn": Object {
    "parentProp": Object {
      "name": "from handler",
    },
  },
}
`;

exports[`scope is used to set the location in redux state 1`] = `
Object {
  "ascope": Object {
    "name": "from handler",
  },
}
`;
